@@ -1,0 +1,9 @@
+//	function commented_function1 () {}
+/* 
+	function commented_function2 () {} 
+*/
+
+function message()
+{
+      alert( "Hello.");     
+}
